# caustic-lasertag-system

./: .cproject  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  generate-eclipse-project.sh
cpp-sources/: CMakeLists.txt  flash-bootloader  flash-bootloader.sh  flash-new-universal-device.sh  flash-universal-device  run-unit-tests.sh
cpp-sources/CubeMX-project/new-universal-device/: .gitignore  new-universal-device.ioc
cpp-sources/lasertag-device/include/: spi.hpp  usart.hpp
cpp-sources/lasertag-device/include/hal/: buttons-manager-base.hpp
cpp-sources/lasertag-device/include/hardware-dependent/: buttons-manager.hpp  devices-pool.hpp  fire-led.hpp  hw-selector.hpp
cpp-sources/lasertag-libraries/: .cproject  .project
cpp-sources/lasertag-libraries/include/dev/: io-pin-utils.hpp  miles-tag-2.hpp  rgb-leds.hpp  wav-player.hpp
cpp-sources/lasertag-libraries/include/hal/: ext-interrupts.hpp
cpp-sources/lasertag-libraries/include/head-sensor/: head-sensor.hpp  kill-zones.hpp  resources.hpp
cpp-sources/lasertag-libraries/include/logic/: player-config-and-state.hpp
cpp-sources/lasertag-libraries/include/rcsp/: RCSP-stream.hpp
cpp-sources/lasertag-libraries/src/core/: string-utils.cpp
cpp-sources/lasertag-libraries/src/dev/: buttons.cpp
cpp-sources/lasertag-libraries/src/head-sensor/: heand-sensor.cpp  parameters.cpp
cpp-sources/lasertag-libraries/src/player/: player.cpp
cpp-sources/lasertag-libraries/src/rifle/: rifle.cpp
cpp-sources/lasertag-libraries/src/rscp/: RCSP-aggregator.cpp  RCSP-modem.cpp  RCSP-stream.cpp
cpp-sources/new-universal-device/: CMakeLists.txt
cpp-sources/new-universal-device/Inc/: dac.h  ffconf.h  sdio.h  stm32f1xx_it.h  tim.h
cpp-sources/new-universal-device/Src/: bsp_driver_sd.c  dac.c  dma.c  freertos.c  gpio.c  main.c  sdio.c  stm32f1xx_it.c  usbd_conf.c
cpp-sources/new-universal-device/high-level/glcd/: glcd_text_tiny.h  text_tiny.c
cpp-sources/new-universal-device/low-level/Inc/: FreeRTOSConfig.h  ffconf.h  gpio.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  tweaks_dma_sdio.h
cpp-sources/new-universal-device/low-level/Src/: adc.c  bsp_driver_sd.c  dma.c  freertos.c  gpio.c  main.c  sdio.c  spi.c  stm32f1xx_it.c  tim.c  tweaks_dma_sdio.c  usart.c  utils_driver_sd.c
cpp-sources/new-universal-device/low-level/newlib/: newlib.c
cpp-sources/new-universal-device/low-level/test/: sdcards-tests.c
cpp-sources/new-universal-device/newlib/: newlib.c
cpp-sources/old-universal-device/: TODO.md  universal-device.doxyfile
cpp-sources/old-universal-device/src/hw/: hardware-initializer-hw.cpp  stm32f1xx_it.c
cpp-sources/stm32f100cbt6b-device/: flash-irrc
cpp-sources/stm32f100cbt6b-device/include/hw/: exti-interrupts.hpp  fire-emitter.hpp
cpp-sources/stm32f100cbt6b-device/src/: main.cpp
cpp-sources/stm32f100cbt6b-device/src/hw/: leds.cpp
cpp-sources/stm32f103ret6-device/: flash-head-sensor
cpp-sources/stm32f103ret6-device/include/hw/: exti-interrupts.hpp  sdcard-low-level.h  spi.hpp  system-clock.hpp
cpp-sources/stm32f103ret6-device/include/tests/: console-tester.hpp
cpp-sources/stm32f103ret6-device/src/hw/: ext-interrupts.cpp  fire-emitter.cpp  spi.cpp
cpp-sources/stm32f103ret6-device/src/tests/: utils.cpp
cpp-sources/unit-tests/: CMakeLists.txt  network-tests.cpp  rcsp-aggregator-tests.cpp  unit-test-stub.cpp
cpp-sources/unit-tests/mock/: loggers-mock.cpp  network-client-mock.cpp  network-client-mock.hpp  network-layer-mock.cpp  network-layer-mock.hpp
cpp-sources/universal-device/: CMakeLists.txt  README.md  st-flash  universal-device.doxyfile
cpp-sources/universal-device/high-level/: high-level.doxyfile
cpp-sources/universal-device/high-level/glcd/: glcd_text.h
cpp-sources/universal-device/high-level/include/: README.md
cpp-sources/universal-device/high-level/utils/: memory-utils.cpp
cpp-sources/universal-device/include/bluetooth-bridge/: bluetooth-bridge.hpp  bluetooth-protocol.hpp  hc05-configurator.hpp
cpp-sources/universal-device/include/communication/: head-sensor-rifle-communication.hpp
cpp-sources/universal-device/include/core/: debug-settings.hpp  device-initializer.hpp  diagnostic.hpp  logging.hpp  os-wrappers.hpp  pinout.hpp  power-monitor.hpp  result-code.hpp  string-utils.hpp
cpp-sources/universal-device/include/dev/: MFRC522-wrapper.hpp  buttons.hpp  io-pins-utils.hpp  lcd5110.hpp  matrix-keyboard.hpp  miles-tag-2.hpp  miles-tag-details.hpp  nrf24l01.hpp  radio.hpp  random.hpp  rgb-leds.hpp  wav-player.hpp
cpp-sources/universal-device/include/device/: device-base-types.hpp
cpp-sources/universal-device/include/game/: game-base-types.hpp  game-log.hpp  game.hpp
cpp-sources/universal-device/include/hal/: adc.hpp  fire-emitter.hpp  fragment-player.hpp  hardware-initializer.hpp  io-pins.hpp  rtc.hpp  spi.hpp  system-clock.hpp  uart.hpp
cpp-sources/universal-device/include/head-sensor/: head-sensor-base-types.hpp  head-sensor.hpp  player-config-and-state.hpp  resources.hpp
cpp-sources/universal-device/include/hw/: adc-hw.hpp  fire-emitter-hw.hpp  fragment-player.hpp  hardware-initializer-hw.hpp  rtc-hw.hpp  spi-hw.hpp  system-clock-hw.hpp  uart-hw.hpp
cpp-sources/universal-device/include/ir/: MT2-base-types.hpp  ir-physical-tv.hpp  ir-physical.hpp  ir-presentation-mt2.hpp  ir-presentation.hpp
cpp-sources/universal-device/include/network/: broadcast.hpp  network-layer.hpp  radio-physical.hpp
cpp-sources/universal-device/include/rcsp/: RCSP-aggregator.hpp  RCSP-codes-manipulation.hpp  RCSP-state-saver.hpp  RCSP-stream.hpp  base-types.hpp  operation-codes.hpp  state-saver-interface.hpp
cpp-sources/universal-device/include/rifle/: resources.hpp  rifle-base-types.hpp  rifle-config-and-state.hpp  rifle-display.hpp  rifle.hpp
cpp-sources/universal-device/include/smart-point/: smart-point-config-and-state.hpp  smart-point-display.hpp  smart-point-state.hpp  smart-point-ui.hpp  smart-point.hpp
cpp-sources/universal-device/low-level/: STM32F103RETx_FLASH.ld
cpp-sources/universal-device/src/: main.cpp
(+5092 files in other folders)
